vlib/v/checker/tests/comptime_call_method_implicit_string_expand_err.vv
module main

struct Dummy {}

fn (_ Dummy) sample(_ int) {}

fn main() {
	args := ['5']
	$for method in Dummy.methods {
		Dummy{}.$method(args)
	}
}
